# MA

./: .gitignore  .~lock.Queue_Classes.odt#  Queue_Classes.odt  README.md
queues/: Cargo.toml  analyze_detailed_coverage.py  asan.log~  best_in_mpsc_plot.py  best_in_spmc_plot.py  best_in_spsc_plot.py  coverage_gap_analysis.md  extract_wcq_uncovered.py  mpmc_violine_graph.py  mpsc_violine_plot_and_graph.py  test_result_mpmc.txt  valgrind_output.txt  violin_plot.py
queues/.cargo/: config.toml
queues/benches/: best_in_mpsc_bench.rs  best_in_spmc_bench.rs  best_in_spsc_bench.rs  mpmc_bench.rs  mpsc_bench.rs  old_spsc.rs  process_bench.rs  spmc_bench.rs  spsc_bench.rs  spsc_bench_alt.rs
queues/coverage/: tarpaulin-report.html
queues/coverage/html/: index.html
queues/coverage/html/coverage/home/baran/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/bitflags-2.9.1/src/: internal.rs.html  iter.rs.html  lib.rs.html  parser.rs.html  public.rs.html  traits.rs.html
queues/coverage/html/coverage/home/baran/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/libc-0.2.172/src/: macros.rs.html
queues/paper/spsc/: lamport_queue.pdf.odg
queues/src/: lib.rs
queues/src/mpmc/: burden_queue.rs  debug.txt  feldman_dechev_queue.rs  jkm_queue.rs  kogan_petrank.rs  kw_queue.rs  mod.rs  polylog_queue.rs  sdp_queue.rs  turn_queue.rs  verma_wf.rs  wcq_queue.rs  ymc_queue.rs
queues/src/mpsc/: dqueue.rs  drescher_queue.rs  jayanti_petrovic_queue.rs  jiffy_queue.rs  mod.rs  sesd_jp_queue.rs
queues/src/spmc/: david_queue.rs  mod.rs
queues/src/spsc/: biffq.rs  blq.rs  bqueue.rs  dehnavi_queue.rs  dspsc.rs  ffq.rs  iffq.rs  lamport.rs  llq.rs  mod.rs  mspsc.rs  sesd_jp_spsc_wrapper.rs  uspsc.rs
queues/tests/: all_tests.rs  drescher_test.rs  jkm_tests.rs  kw_test.rs  miri_fork_test.rs  miri_mpmc_tests.rs  miri_mpsc_tests.rs  miri_spmc_tests.rs  miri_spsc_tests.rs  miri_unbounded_mmap_test.rs  test.rs  test_bench_kw.rs  test_kw.rs  unit_test.rs  unit_test_mpsc.rs  unit_test_spmc.rs  unit_test_spsc.rs  unit_tests_mpmc.rs  wcq_tests.rs
queues/web_scraper/: abstract_splitter.py  compare.py  duplicate_remover.py  regex_remover.py  web_scraper.py
(+54 files in other folders)
