[package]
name = "queues"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8.4"
criterion = { version = "0.6.0", optional = true }
libc = {version = "0.2", features = ["extra_traits"] }
rand = "0.9.1"
nix = { version = "0.30.1", features = ["mman", "process", "fs", "ioctl"] }

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
nix = "0.30.1"
loom = "0.7"

[features]
bench = ["criterion"]
debug_logging = []

[[bench]]
name = "spsc_bench"
harness = false
required-features = ["bench"]

[[bench]]
name = "mpsc_bench"
harness = false
required-features = ["bench"]

[[bench]]
name = "mpmc_bench"
harness = false
required-features = ["bench"]

[profile.release]
debug = 2
split-debuginfo = "off"
strip = false
lto = false